# quantum-memory-graph

./: .gitignore  .gitleaks.toml  CASE_STUDY_HERMES.md  CHANGELOG.md  COMPARISON.md  Dockerfile  LICENSE  README.md  SECURITY_AUDIT_PR5.md  SKILL.md  THIRD-PARTY-LICENSES  pyproject.toml  setup.cfg
.github/workflows/: benchd-validate.yml  make-public.yml  native-artifact-ci.yml  security-review.yml
benchmarks/: LONGMEMEVAL_OFFICIAL.md  __init__.py  data_collector.py  dedup_benchmark.py  fast_longmemeval.py  generate_scenarios.py  longmemeval_bench.py  longmemeval_bench_v2.py  longmemeval_bench_v3.py  longmemeval_bench_v4.py  longmemeval_bench_v5.py  longmemeval_bench_v6.py  longmemeval_bench_v7.py  longmemeval_bm25_hybrid_results.json  longmemeval_chunked_staged_results.csv  longmemeval_chunked_staged_results.json  longmemeval_e2e_r1_results.json  memcombine.py  memcombine_250.json  rerun_longmemeval_judge.py  results_250.json  results_longmemeval.json  results_longmemeval_v3.json  results_longmemeval_v4.json  results_longmemeval_v6.json  results_longmemeval_v7.json  run_debug.sh  run_final.py  run_full_benchmark.py  run_full_benchmark_v2.py  run_longmemeval_chunked_staged.py  run_longmemeval_cvar_v2.py  run_longmemeval_e2e_qa.py  run_longmemeval_hybrid.py  run_longmemeval_r1_gen.py  run_longmemeval_staged.py
benchmarks/longmemeval/benchd-run-e375a77f15fb/: PROVENANCE.md  summary.json  validator.py
benchmarks/longmemeval/benchd-run-e375a77f15fb/tests/: test_validator.py
benchmarks/longmemeval/native-official-20260716/: PROVENANCE.md  benchd-openrouter.env.example
benchmarks/longmemeval/native-official-20260716/results/: eval-results-500.json  eval-summary.json  hypotheses_merged_500.jsonl
benchmarks/longmemeval/native-official-20260716/scripts/: evaluate_qa_openrouter.py  qmg_chunked_hybrid_runner.py  run_generation_openrouter.py  run_generation_repair.py  validate_artifacts.py
benchmarks/longmemeval/native-official-20260716/tests/: test_chunked_hybrid.py  test_evaluate_qa_openrouter.py  test_generation_wrapper.py  test_generation_wrapper_repair.py  test_validate_artifacts.py
examples/: README.md  llama_cpp_qmg_memory.py  ollama_qmg_middleware.py
quantum_memory_graph/: __init__.py  __main__.py  api.py  dedup.py  graph.py  obsidian.py  pce_optimizer.py  pipeline.py  recency.py  sharing.py  subgraph_optimizer.py  synergy_reranker.py  tiers.py
skills/qmg/: SKILL.md
tests/: test_dedup.py  test_full_pipeline.py  test_recency.py  test_sharing.py  test_tiers.py
