[metadata]
name = quantum-memory-graph
version = 0.3.0
description = Quantum-optimized knowledge graph memory for AI agents. Relationship-aware subgraph selection via QAOA.
long_description = file: README.md
long_description_content_type = text/markdown
author = Coinkong (Chef's Attraction)
license = MIT
url = https://github.com/Dustin-a11y/quantum-memory-graph
keywords = quantum, memory, knowledge-graph, agents, qaoa, ai
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.9
install_requires =
    mempalace>=3.0.0
    quantum-agent-memory>=0.1.0
    sentence-transformers>=2.2.0
    networkx>=3.0
    numpy>=1.24.0
    qiskit>=1.0.0
    qiskit-aer>=0.13.0

[options.extras_require]
api = fastapi>=0.100.0; uvicorn>=0.20.0
ibm = qiskit-ibm-runtime>=0.20.0
high-accuracy = sentence-transformers>=2.2.0
dev = pytest>=7.0.0; pytest-cov>=4.0.0
