[metadata]
name = quantum-memory-graph
version = 1.2.1
description = Quantum-optimized knowledge graph memory for AI agents. Relationship-aware subgraph selection via QAOA.
long_description = file: README.md
long_description_content_type = text/markdown
author = Coinkong (Chef's Attraction)
license = MIT
url = https://github.com/Dustin-a11y/quantum-memory-graph
project_urls =
    Source Code = https://github.com/Dustin-a11y/quantum-memory-graph
    Issue Tracker = https://github.com/Dustin-a11y/quantum-memory-graph/issues
    Benchmark Results = https://github.com/Dustin-a11y/quantum-memory-graph/tree/main/benchmarks
    LongMemEval Submission = https://github.com/xiaowu0162/LongMemEval/issues
keywords = quantum, memory, knowledge-graph, agents, qaoa, ai
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
python_requires = >=3.9
install_requires =
    quantum-agent-memory>=0.1.0
    sentence-transformers>=2.2.0
    networkx>=3.0
    numpy>=1.24.0
    qiskit>=1.0.0
    qiskit-aer>=0.13.0

[options.extras_require]
api = fastapi>=0.100.0; uvicorn>=0.20.0
ibm = qiskit-ibm-runtime>=0.20.0
dev = pytest>=7.0.0; pytest-cov>=4.0.0
